fix spacing when scrollbar is present

--- a/client/css/less/components/sidebar.less
+++ b/client/css/less/components/sidebar.less
@@ -166,7 +166,7 @@
 // sidebar user filter widget styles
 .sidebar .user-filter-widget {
   .group {
-    width: 82%;
+    width: 90%;
     margin: 0 auto;
     .clearfix();
 
